Gradient borders restricted to home page

--- a/application/views/home/index.html
+++ b/application/views/home/index.html
@@ -1,5 +1,5 @@
 <h1 class="text-center">Get the perfect <strong>Internship and Training</strong> this summer!</h1>
-<section class="container">
+<section class="container" id="categories">
     <div class="row">
         <div class="bs-glyphicons">
             <ul class="bs-glyphicons-list" id="new_category">
