--- a/application/views/resumes/create.html
+++ b/application/views/resumes/create.html
@@ -3,7 +3,7 @@
         <h1 class="page-header text-center">Resume Builder</h1>
         <p id="showMessage" class="text-center">Note : If you already have an account login and create resume easily or continue here.</p>
         
-        {if $edu}
+        {if $qual}
         <form class="panel panel-default" id="education" method="post">
             <div class="panel-body"><br>
                 <legend>Education Details</legend>
@@ -12,7 +12,7 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-bank"></i> College/University/School</label>
-                                <input type="text" list="college" name="name[]" class="form-control" required="" placeholder="start typing full name..." autocomplete="on">
+                                <input type="text" list="college" name="institute" class="form-control" required="" placeholder="start typing full name..." autocomplete="on">
                                 <datalist id="college">
                                 {include resumes/list/colleges.html}
                                 </datalist>
@@ -21,7 +21,7 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-graduation-cap"></i> Qualification/Degree</label>
-                                <input type="text" list="degree" name="degree[]" class="form-control" required="" placeholder="eg. B.Tech, Intermediate, 10th" autocomplete="on">
+                                <input type="text" list="degree" name="degree" class="form-control" required="" placeholder="eg. B.Tech, Intermediate, 10th" autocomplete="on">
                                 <datalist id="degree">
                                 {include resumes/list/degrees.html}
                                 </datalist>
@@ -32,27 +32,26 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-bookmark"></i> Major</label>
-                                <input type="text" list="major" name="major[]" class="form-control" required="" placeholder="eg. Economics, Civil Engineering etc" autocomplete="on">
+                                <input type="text" list="major" name="major" class="form-control" required="" placeholder="eg. Economics, Civil Engineering etc" autocomplete="on">
                                 <datalist id="major">
                                 {include resumes/list/majors.html}
                                 </datalist>
                             </div>
                             <div class="form-group">
                                 <label for=""><i class="fa fa-certificate"></i> Percentage or GPA<small>(till now for current)</small></label>
-                                <input type="tel" name="gpa[]" class="form-control" placeholder="eg. 8.2, 73%, etc">
+                                <input type="tel" name="gpa" class="form-control" placeholder="eg. 8.2, 73%, etc">
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-calendar"></i> Passing Year</label>
-                                <input type="tel" name="passing_year[]" class="form-control" required="" placeholder="eg. 2016">
+                                <input type="tel" name="passing_year" class="form-control" required="" placeholder="eg. 2016">
                             </div>
                         </div>
                     </div>
                 </div>
-                <input type="hidden" name="action" value="update_qualification">
+                <input type="hidden" name="action" value="saveQual">
                 <div class="row col-md-12">
-                    <button type="button" name="more" value="more_edu" class="btn btn-info pull-left"><i class="fa fa-plus-circle fa-fw"></i> Add More Education</button>
                     <button type="submit" name="education" class="btn btn-success pull-right">Next <i class="fa fa-arrow-circle-o-right fa-fw"></i></button>
                 </div>
             </div>
@@ -60,7 +59,7 @@
         {/if}
 
         {if ($work)}
-        <form class="panel panel-default {if $edu}hide{/if}" id="work" method="post">
+        <form class="panel panel-default {if $qual}hide{/if}" id="work" method="post">
             <div class="panel-body"><br>
                 <legend>Experience Details <small>(small work even working in college fest counts)</small></legend>
                 <div id="more_work">
@@ -68,7 +67,7 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-bank"></i> Company/Organization Name</label>
-                                <input type="text" list="company" name="name[]" class="form-control" required="" placeholder="start typing..." autocomplete="off">
+                                <input type="text" list="company" name="institute" class="form-control" required="" placeholder="start typing..." autocomplete="on">
                                 <datalist id="company">
                                 {include resumes/list/companies.html}
                                 </datalist>
@@ -77,7 +76,7 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-calendar"></i> Duration</label>
-                                <input type="text" name="duration[]" class="form-control" required="" placeholder="eg. May 2014 to July 2014">
+                                <input type="text" name="duration" class="form-control" required="" placeholder="eg. May 2014 to July 2014">
                             </div>
                         </div>
                     </div>
@@ -85,13 +84,13 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-line-chart"></i> Responsibility</label>
-                                <textarea name="responsibility[]" class="form-control" placeholder="explain what work you did."></textarea>
+                                <textarea name="responsibility" class="form-control" placeholder="explain what work you did."></textarea>
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label for=""><i class="fa fa-certificate"></i> Designation</label>
-                                <input type="text" name="designation[]" class="form-control" required="" placeholder="eg. Intern, Sales Executive, etc">
+                                <input type="text" name="designation" class="form-control" required="" placeholder="eg. Intern, Sales Executive, etc">
                             </div>
                         </div>
                     </div>
@@ -107,8 +106,7 @@
                 </div>
                 {/if}
                 <div class="row col-md-12">
-                    <input type="hidden" name="action" value="update_work">
-                    <button type="button" name="more" value="more_work" class="btn btn-info pull-left"><i class="fa fa-plus-circle fa-fw"></i> Add More Work</button>
+                    <input type="hidden" name="action" value="saveWork">
                     <button type="submit" name="work" class="btn btn-success pull-right">Submit <i class="fa fa-check-circle"></i></button>
                 </div>
             </div>
@@ -127,7 +125,7 @@
                     </div>
                 </div>
                 <div class="row col-md-12">
-                    <input type="hidden" name="action" value="update_skills">
+                    <input type="hidden" name="action" value="saveSkills">
                     <button type="submit" class="btn btn-success pull-right">Submit <i class="fa fa-check-circle"></i></button>
                 </div>
             </div>
