--- a/application/views/layouts/modal/work.html
+++ b/application/views/layouts/modal/work.html
@@ -11,7 +11,10 @@
                         <div class="col-xs-12 col-md-6">
                             <div class="form-group">
                                 <label><i class="fa fa-bank"></i> Company/Organization Name</label>
-                                <input type="text" name="institute" class="form-control" required="" placeholder="start typing..." autocomplete="off">
+                                <input type="text" list="company" name="institute" class="form-control" required="" placeholder="start typing..." autocomplete="on">
+                                <datalist id="company">
+                                {include resumes/list/companies.html}
+                                </datalist>
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6">
