--- a/application/views/admin/data.html
+++ b/application/views/admin/data.html
@@ -1,6 +1,61 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">Data Analysis</h1>
-        
+        <form class="form-inline text-center" role="form" id="created_stats">
+            <div class="form-group">
+                <div class="input-group">
+                    <label class="sr-only">Model</label>
+                    <select name="model" id="item" class="form-control">
+                        <option value="user">Users</option>
+                        <option value="work">Works</option>
+                        <option value="transaction">Transactions</option>
+                        <option value="test">Test</option>
+                        <option value="sponsored">Sponsoreds</option>
+                        <option value="social">Social</option>
+                        <option value="rsvp">RSVPs</option>
+                        <option value="resume">Resumes</option>
+                        <option value="question">Questions</option>
+                        <option value="qualification">Qualifications</option>
+                        <option value="photograph">Photographs</option>
+                        <option value="participant">Participants</option>
+                        <option value="organization">Organizations</option>
+                        <option value="order">Orders</option>
+                        <option value="opportunity">Opportunities</option>
+                        <option value="message">Messages</option>
+                        <option value="member">Members</option>
+                        <option value="follow">Followers</option>
+                        <option value="experience">Experiences</option>
+                        <option value="certificate">Certificates</option>
+                        <option value="blog">Blog Posts</option>
+                        <option value="application">Applications</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <label class="sr-only">From</label>
+                    <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> From</span>
+                    <input type="date" style="width: 200px" name="startdate" class="form-control" />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <label class="sr-only">To</label>
+                    <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> To</span>
+                    <input type="date" style="width: 200px" name="enddate" class="form-control" />
+                </div>
+            </div>
+            <input type="hidden" name="action" value="dataAnalysis">
+            <button type="submit" class="btn btn-primary">Analyze</button>
+        </form>
+        <hr>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-bar-chart-o fa-fw"></i> Stats
+            </div>
+            <div class="panel-body">
+                <div id="stats">Select an opportunity and date range and then click on view stats button to show details.</div>
+            </div>
+        </div>
     </div>
 </div>
