--- a/application/views/admin/index.html
+++ b/application/views/admin/index.html
@@ -36,8 +36,9 @@
                     <a class="list-group-item active text-center">
                         <i class="fa fa-support"></i> Support
                     </a>
-                    <a href="/faq" class="list-group-item"><i class="fa fa-question-circle fa-2x"></i>  FAQs</a>
-                    <a href="/contact" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i>  Report a Problem</a>
+                    <a href="http://www.slideshare.net/swiftintern" class="list-group-item"><i class="fa fa-slideshare fa-2x"></i>  SlideShare</a>
+                    <a href="https://github.com/Swiftintern/Swiftintern/issues" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i>  Submit a Issue</a>
+                    <a href="/admin/support" class="list-group-item"><i class="fa fa-ticket fa-2x"></i>  Support Tickets</a>
                 </div>
             </div>
 
