Updated Resume Upload URL

--- a/application/views/students/index.html
+++ b/application/views/students/index.html
@@ -23,7 +23,7 @@
                     </p>
                     <p>
                         {if(!count($resumes))}
-                        <a href="#">New Resume</a>
+                        <a href="/students/settings#resume">Upload Resume</a>
                         {/if}
                     </p>
                 </div>
