Improved guidelines page
The page heading needs to have a background though. Looks incomplete.

--- a/application/views/resumes/guidelines.html
+++ b/application/views/resumes/guidelines.html
@@ -19,7 +19,7 @@
                 <h2>Education</h2>
                 <p> Keep this section as standard as possible and leave off all high school information. Include: name of degree, anticipated date of graduation, name of institution, city/state, and GPA if at least a 3.0</p>
             </li><li class="list-group-item">
-                <h2>Skills & Qualifications</h2>
+                <h2>Skills &amp; Qualifications</h2>
                 <p>Consider the skills, strengths, knowledge and competencies you possess as it directly relates to the position. You may also want to use an existing job description to help you brainstorm for this section.</p>
             </li>
             <li class="list-group-item">
