--- a/public/assets/css/custom-1.0.css
+++ b/public/assets/css/custom-1.0.css
@@ -96,6 +96,7 @@ h1.text-center
   padding: 0.5em 0;
   position: relative;
   width: 99%;
+  font-weight: 700;
 }
 section#categories
 {
@@ -124,6 +125,10 @@ h1.text-center strong
   font-size: 120%;
   color: rgb(74,74,74)
 }
+div.panel h3
+{
+  font-family: 'Nunito';
+}
 nav
 {
   border-radius: 0px !important;
@@ -151,12 +156,62 @@ div.row::after
   text-align: center;
   margin-left: 41%;
 }
+article.row ul.list-group li.list-group-item p
+{
+  text-align: justify;
+}
+article.row ul.list-group li.list-group-item h2
+{
+  color: rgb(50, 118, 177);
+  font-weight: 700;
+}
+article.row ul.list-group li.list-group-item
+{
+  text-align: center;
+  margin: 0 auto;
+  width: 75%;
+}
+/*Arrows Experimental*/
+article.row ul.list-group li.list-group-item:nth-of-type(odd)::after
+{
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 80px;
+  top: 75%;
+  left: 100%;
+  background: url(../images/resume/rA.svg);
+  background-position: center;
+  background-size: cover;
+  z-index: 10000;
+}
+article.row ul.list-group li.list-group-item:nth-of-type(even)::after
+{
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 80px;
+  top: 75%;
+  right: 100%;
+  background: url(../images/resume/lA.svg);
+  background-position: center;
+  background-size: cover;
+  z-index: 10000;
+}
+article.row ul.list-group li.list-group-item:nth-of-type(9)::after
+{
+  background: none;
+}
 @media (min-width: 768px)
 {
 .bs-glyphicons::before
   {
     font-size: 1.4em;
   }
+article.row ul.list-group li.list-group-item
+  {
+    width: 70%;
+  }  
 }
 @media (min-width: 992px)
 {
@@ -164,11 +219,19 @@ div.row::after
   {
     font-size: 1.8em;
   }
+article.row ul.list-group li.list-group-item
+  {
+    width: 60%;
+  }
 }
 @media (min-width: 1200px)
 {
 .bs-glyphicons::before
   {
     font-size: 2em;
+  }
+article.row ul.list-group li.list-group-item
+  {
+    width: 50%;
   }
 }
