--- a/application/views/employer/settings.html
+++ b/application/views/employer/settings.html
@@ -1,10 +1,40 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
-        <br>
-        <legend>Profile</legend>
-        <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Update with Linkedin</a></p>
+        <h1 class="page-header text-center">Settings</h1>
+        {if isset($success)}
+        <div class="alert alert-success alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+            Saved <strong>Successfully!</strong>
+        </div>
+        {/if}
 
-        <legend>Newsletter</legend>
+        <h3 id="basic">Basic Details</h3>
+        <form class="form-horizontal panel panel-default panel-body" method="post" action="">
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Full Name</label>
+                <div class="col-sm-9">
+                    <input type="text" name="name" class="form-control" placeholder="Enter name" value="{$user->name}" required="">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Email</label>
+                <div class="col-sm-9">
+                    <input type="email" name="email" class="form-control" placeholder="Enter email" value="{$user->email}" disabled>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Phone</label>
+                <div class="col-sm-9">
+                    <input type="tel" name="phone" class="form-control" placeholder="Enter phone number" value="{$user->phone}" required="">
+                    <small class="help-block">Will be for telephonic verification</small>
+                </div>
+            </div>
+            <input type="hidden" name="action" value="saveUser">
+            <button type="submit" class="btn btn-success pull-right">Save <i class="fa fa-check-circle fa-fw"></i></button>
+        </form><br>
+
+
+        <h3>Newsletter</h3>
         <ul class="list-group">
             <li class="list-group-item">Monthly Summary <span class="badge"><input type="checkbox" checked=""></span></li>
             <li class="list-group-item">Notification on Student Apply <span class="badge"><input type="checkbox" checked=""></span></li>
