--- a/application/views/employer/internship.html
+++ b/application/views/employer/internship.html
@@ -2,7 +2,13 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header text-center">{echo $internship->title}</h1>
-            <form class="panel panel-default text-center" method="post" action="/employer/internship">
+            {if isset($success)}
+            <div class="alert alert-success alert-dismissible fade in" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                Internship Updated <strong>Successfully!</strong>
+            </div>
+            {/if}
+            <form class="panel panel-default text-center" method="post" action="">
                 <table class="table">
                     <tbody>
                         <tr>
