--- a/application/views/employer/postinternship.html
+++ b/application/views/employer/postinternship.html
@@ -2,10 +2,22 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header text-center">Post Internship</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
+            {if isset($success)}
+            <div class="alert alert-success alert-dismissible fade in" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                Internship Posted <strong>Successfully!</strong>
+            </div><br>
+
+            <p>The Internship Opportunity you Created is Pending Approval. It will be activated within 12 hours, you may be contacted if any information is missing</p>
+            <p>To view any applicants who have applied to your Internship Please visit Applicants under My Internships from Left Menu</p>
+            <p>To see the Reach of the Internship Opportunity please visit the analytics from left menu</p>
+            <p>If you find any problem while posting internship or you dont understand, you can always call at +91-9891048495 we would be happy to hear from you.</p>
+            <p>You can always suggest us any improvement or bug, we will fix it for you. <a href="/contact" class="btn btn-danger btn-xs">Report</a></p>
+            <p class="text-center">
+                <a href="/{echo urlencode($opportunity->title)}/{echo $opportunity->id}" class="btn btn-success" target="_blank">View Internship</a>
+                <a href="/employer/internship/{echo $opportunity->id}" class="btn btn-primary" target="_blank">Edit</a>
+            </p>
+            {/if}
             <form method="post" action="/employer/postinternship">
                 <div class="panel panel-default panel-body">
                     <div class="form-group">
