--- a/application/views/employer/about.html
+++ b/application/views/employer/about.html
@@ -1,20 +1,13 @@
-<header class="intro-header" style="background-image: url('/assets/images/layouts/header-bg.jpg')">
+<header class="sb-page-header">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <div class="site-heading">
-                    <h1>India's Largest Internship Portal</h1>
-                    <hr class="small">
-                    <span class="subheading">5,119 organizations are registered with us, register <a href="employer/register" target="_blank">here</a>.</span>
-                </div>
-            </div>
-        </div>
+        <h1>India Largest Internship Portal</h1>
+        <span class="subheading">5,119 organizations are registered with us, register <a href="/employer/register" target="_blank">here</a>.</span>
     </div>
 </header>
 
 <div class="container">
-    <div class="row blog">
-        <p class="">The dream...hire experienced interns who require very little, if any, training.  But this dream conflicts with reality.  How can organizations meet the needs of today and prepare the workforce of the future?  One solution is to develop a quality internship program.  We will assist you in doing just that.</p>
+    <div class="row">
+        <p>The dream...hire experienced interns who require very little, if any, training.  But this dream conflicts with reality.  How can organizations meet the needs of today and prepare the workforce of the future?  One solution is to develop a quality internship program.  We will assist you in doing just that.</p>
         <div role="tabpanel">
 
             <!-- Nav tabs -->
@@ -179,6 +172,6 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
-        $('.navbar').css('margin-bottom', '-20px');
+        $(".navbar").css("margin-bottom", "0px");
     });
 </script>
