--- a/application/views/employer/followers.html
+++ b/application/views/employer/followers.html
@@ -11,14 +11,14 @@
                     <div class="input-group">
                         <label class="sr-only">From</label>
                         <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> From</span>
-                        <input type="date" style="width: 200px" name="startdate" class="form-control" value="{echo $week}" />
+                        <input type="date" style="width: 200px" name="startdate" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group">
                         <label class="sr-only">To</label>
                         <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> To</span>
-                        <input type="date" style="width: 200px" name="enddate" class="form-control" value="{echo $now}" />
+                        <input type="date" style="width: 200px" name="enddate" class="form-control">
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">View Analytics</button>
