--- a/application/views/employer/reach.html
+++ b/application/views/employer/reach.html
@@ -1,50 +1,43 @@
 <div id="page-wrapper">
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header text-center">Internship Analytics</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <form class="form-inline text-center" role="form" id="reach">
-                <div class="form-group">
-                    <div class="input-group">
-                        <label class="sr-only">Opportunity</label>
-                        <select name="meta_value" class="form-control">
-                            {foreach $opportunity in $opportunities}
-                            {script $meta = Meta::first(array("property = ?" => "company_share_opportunity", "property_id = ?" => $opportunity->id, "meta_key = ?" => "updateKey"))}
-                            <option value="{echo $meta->meta_value}">{echo $opportunity->title}</option>
-                            {/foreach}
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <label class="sr-only">From</label>
-                        <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> From</span>
-                        <input type="date" style="width: 200px" name="startdate" class="form-control" value="{echo $week}" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <label class="sr-only">To</label>
-                        <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> To</span>
-                        <input type="date" style="width: 200px" name="enddate" class="form-control" value="{echo $now}" />
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">View Analytics</button>
-            </form>
-            <hr>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <i class="fa fa-bullhorn fa-fw"></i> Reach
-                </div>
-                <div class="panel-body text-center">
-                    <img id="output" src="/employer/reachstats/$meta->meta_value/{echo $week}/{echo $now}">
+    <div class="col-lg-12 row">
+        <h1 class="page-header text-center">Internship Analytics</h1>
+        <form class="form-inline text-center" role="form" id="reach">
+            <div class="form-group">
+                <div class="input-group">
+                    <label class="sr-only">Opportunity</label>
+                    <select name="meta_value" class="form-control">
+                        {foreach $opportunity in $opportunities}
+                        {script $meta = Meta::first(array("property = ?" => "company_share_opportunity", "property_id = ?" => $opportunity->id, "meta_key = ?" => "updateKey"))}
+                        <option value="{echo $meta->meta_value}">{echo $opportunity->title}</option>
+                        {/foreach}
+                    </select>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <label class="sr-only">From</label>
+                    <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> From</span>
+                    <input type="date" style="width: 200px" name="startdate" class="form-control">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <label class="sr-only">To</label>
+                    <span class="add-on input-group-addon"><i class="fa fa-calendar fa-fw"></i> To</span>
+                    <input type="date" style="width: 200px" name="enddate" class="form-control">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">View Analytics</button>
+        </form>
+        <hr>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <i class="fa fa-bullhorn fa-fw"></i> Reach
+            </div>
+            <div class="panel-body text-center">
+                <img id="output" src="/employer/reachstats/$meta->meta_value/{echo $week}/{echo $now}">
+            </div>
         </div>
+
     </div>
 </div>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
