--- a/application/views/employer/settings.html
+++ b/application/views/employer/settings.html
@@ -7,6 +7,13 @@
             Saved <strong>Successfully!</strong>
         </div>
         {/if}
+        
+        {if(isset($user->phone))}
+        <div class="alert alert-warning alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+            Please Enter your <strong>Phone Number</strong> for verification Call
+        </div>
+        {/if}
 
         <h3 id="basic">Basic Details</h3>
         <form class="form-horizontal panel panel-default panel-body" method="post" action="">
