--- a/public/assets/css/custom-1.0.css
+++ b/public/assets/css/custom-1.0.css
@@ -10,7 +10,6 @@ html, body{font-family:"Quicksand",Helvetica,Arial,sans-serif;color:#878787;}
     position: relative;
     text-align: center;
 }
-
 .whitetext{color:white;}
 .small_image{max-height:60px;float:left;}
 .medium_image{max-height:160px;max-width:350px;float:left;}
@@ -80,50 +79,19 @@ footer .pull-left, footer .pull-right{float:none !important;display:block;}
 
 /*Improvements, by sakshamsaxena*/
 
+/*Footer Styles*/
 footer a:hover, footer a:focus
 {
   color: #87D6F1;
   border-bottom: 1px dashed white;
   text-decoration: none;
 }
+
+/*Standard Styles*/
 p
 {
   font-family: 'Quicksand';
-}
-h1.text-center
-{
-  margin: 0 auto 1em;
-  padding: 0.5em 0;
-  position: relative;
-  width: 99%;
-  font-weight: 700;
-}
-section#categories
-{
-  position: relative;
-  margin-bottom: 0.5em;
-}
-section#categories:before, section#categories:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 3px;
-  background-image: -webkit-linear-gradient(left, transparent, #878787, transparent);
-  background-image: -moz-linear-gradient(left, transparent, #878787, transparent);
-  background-image: -o-linear-gradient(left, transparent, #878787, transparent);
-  background-image: linear-gradient(left, transparent, #878787, transparent);
-}
-section#categories:before {
-  left: -3px;top: -3px;
-}
-section#categories:after {
-  right: -3px;bottom: -3px;
-}
-
-h1.text-center strong
-{
-  font-size: 120%;
-  color: rgb(74,74,74)
+  text-align: justify
 }
 div.panel h3
 {
@@ -141,13 +109,51 @@ nav
 {
   margin: 0 auto;
 }
-.bs-glyphicons
-{
-  margin: 0;
-}
 div.row::after
 {
   margin-bottom: 2em
+}
+
+/*Heading Styles*/
+h1.text-center
+{
+  margin: 0 auto 1em;
+  padding: 0.5em 0;
+  position: relative;
+  width: 99%;
+  font-weight: 700;
+}
+
+/*Home Page Categories Styling*/
+section#categories
+{
+  position: relative;
+  margin-bottom: 0.5em;
+}
+section#categories:before, section#categories:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-image: -webkit-linear-gradient(left, transparent, #878787, transparent);
+  background-image: -moz-linear-gradient(left, transparent, #878787, transparent);
+  background-image: -o-linear-gradient(left, transparent, #878787, transparent);
+  background-image: linear-gradient(left, transparent, #878787, transparent);
+}
+section#categories:before {
+  left: -3px;top: -3px;
+}
+section#categories:after {
+  right: -3px;bottom: -3px;
+}
+h1.text-center strong
+{
+  font-size: 120%;
+  color: rgb(74,74,74)
+}
+.bs-glyphicons
+{
+  margin: 0;
 }
 .bs-glyphicons::before
 {
@@ -156,10 +162,8 @@ div.row::after
   text-align: center;
   margin-left: 41%;
 }
-article.row ul.list-group li.list-group-item p
-{
-  text-align: justify;
-}
+
+/*Guidelines Styling (Selectors UNCERTAIN)*/
 article.row ul.list-group li.list-group-item h2
 {
   color: rgb(50, 118, 177);
