--- a/application/views/employer/applicants.html
+++ b/application/views/employer/applicants.html
@@ -1,53 +1,101 @@
 <div id="page-wrapper">
-    <div class="row">
-        <div class="col-lg-12">
-            <h2 class="page-header text-center">{echo $internship->title}</h2>
-            <ul class="nav nav-tabs nav-justified" role="tablist" id="myTab">
-                <li class="active"><a href="#applications" role="tab" data-toggle="tab">Applications <span class="badge">{echo count($applicants)}</span></a></li>
-                <li><a href="#shortlisted" role="tab" data-toggle="tab">Shortlisted <span class="badge">{echo count($shortlisted)}</span></a></li>
-                <li><a href="#selected" role="tab" data-toggle="tab">Selected <span class="badge">{echo count($selected)}</span></a></li>
-            </ul>
+    <div class="row col-lg-12">
+        <h2 class="page-header text-center">{echo $internship->title}</h2>
+        <ul class="nav nav-tabs nav-justified" role="tablist" id="myTab">
+            <li class="active"><a href="#applications" role="tab" data-toggle="tab">Applications <span class="badge">{echo count((array)$applicants)}</span></a></li>
+            <li><a href="#shortlisted" role="tab" data-toggle="tab">Shortlisted <span class="badge">{echo count((array)$shortlisted)}</span></a></li>
+            <li><a href="#selected" role="tab" data-toggle="tab">Selected <span class="badge">{echo count((array)$selected)}</span></a></li>
+        </ul>
 
-            <div class="tab-content">
-                <div class="tab-pane active" id="applications">
-                    <div class="panel panel-default">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Major</th>
-                                    <th>Status</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {foreach $applicant in $applicants}
-                                <tr>
-                                    <td><a href="/students/profile/{echo $applicant->student_id}" target="_blank" >{echo $applicant->name}</a></td>
-                                    <td>{echo $applicant->qualification->major}</td>
-                                    <td>{echo $applicant->status}</td>
-                                    <td>
-                                        <a href="/students/profile/{echo $applicant->student_id}" class="btn btn-info btn-xs"><i class="fa fa-eye"></i> View</a>&nbsp;
-                                        <button data-application="{echo $applicant->id}" data-status="shortlist" class="btn btn-success btn-xs status"><i class="fa fa-check"></i> Shortlist</button>&nbsp;
-                                        <a href="" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Notes </a>&nbsp;
-                                        
-                                    </td>
-                                </tr>
-                                {/foreach}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+        <div class="tab-content">
+            <div class="tab-pane active" id="applications">
+                <div class="panel panel-default">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Major</th>
+                                <th>Status</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {foreach $applicant in $applicants}
+                            <tr>
+                                <td><a href="/students/profile/{echo $applicant->student_id}" target="_blank" >{echo $applicant->name}</a></td>
+                                <td>{echo $applicant->qualification->major}</td>
+                                <td>{echo $applicant->status}</td>
+                                <td>
+                                    <a href="/students/profile/{echo $applicant->student_id}" class="btn btn-info btn-xs"><i class="fa fa-eye"></i> View</a>&nbsp;
+                                    <button data-application="{echo $applicant->id}" data-status="shortlist" class="btn btn-success btn-xs status"><i class="fa fa-check"></i> Shortlist</button>&nbsp;
+                                    <a href="" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Notes </a>&nbsp;
 
-                <div class="tab-pane" id="shortlisted">
-                    
+                                </td>
+                            </tr>
+                            {/foreach}
+                        </tbody>
+                    </table>
                 </div>
-                
-                <div class="tab-pane" id="selected">
-                    
-                </div>
-
             </div>
+
+            <div class="tab-pane" id="shortlisted">
+                <div class="panel panel-default">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Major</th>
+                                <th>Status</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {foreach $applicant in $shortlisted}
+                            <tr>
+                                <td><a href="/students/profile/{echo $applicant->student_id}" target="_blank" >{echo $applicant->name}</a></td>
+                                <td>{echo $applicant->qualification->major}</td>
+                                <td>{echo $applicant->status}</td>
+                                <td>
+                                    <a href="/students/profile/{echo $applicant->student_id}" class="btn btn-info btn-xs"><i class="fa fa-eye"></i> View</a>&nbsp;
+                                    <button data-application="{echo $applicant->id}" data-status="shortlist" class="btn btn-success btn-xs status"><i class="fa fa-check"></i> Shortlist</button>&nbsp;
+                                    <a href="" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Notes </a>&nbsp;
+
+                                </td>
+                            </tr>
+                            {/foreach}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="tab-pane" id="selected">
+                <div class="panel panel-default">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Major</th>
+                                <th>Status</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {foreach $applicant in $selected}
+                            <tr>
+                                <td><a href="/students/profile/{echo $applicant->student_id}" target="_blank" >{echo $applicant->name}</a></td>
+                                <td>{echo $applicant->qualification->major}</td>
+                                <td>{echo $applicant->status}</td>
+                                <td>
+                                    <a href="/students/profile/{echo $applicant->student_id}" class="btn btn-info btn-xs"><i class="fa fa-file-text-o"></i> Resume</a>&nbsp;
+                                    <a href="" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Notes </a>&nbsp;
+                                </td>
+                            </tr>
+                            {/foreach}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
