--- a/application/views/students/settings.html
+++ b/application/views/students/settings.html
@@ -43,7 +43,7 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Your Resumes</label>
                     <div class="col-sm-9">
-                    {if(!empty($resumes))}
+                    {if(count($resumes) >= 1)}
                         {foreach $resume in $resumes}
                             <a href="/resumes/view/{echo $resume->id}">Resume_{echo $resume->id}</a>
                         {/foreach}
